--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,22 @@ wasm-bindgen = "0.2.78"
 wee_alloc = { version = "0.4.2", optional = true }
 
 console_error_panic_hook = "0.1.7"
+rand = "0.8.4"
+
+getrandom = { version = "0.2.3", features = ["js"] }
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
 [dependencies.web-sys]
 version = "0.3.55"
-features = ["console"]
+features = [
+    "console",
+    "Window",
+    "Document",
+    "Element",
+    "HtmlCanvasElement",
+    "CanvasRenderingContext2d"
+]
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
